--- a/css/main.scss
+++ b/css/main.scss
@@ -307,7 +307,7 @@
             color: #20122b;
             font-family: "Lato";
             font-weight: 400;
-            font-size: 3.5vw;
+            font-size: 3vw;
             line-height: 1.2em;
             letter-spacing: -0.1px;
             white-space: nowrap;
@@ -390,13 +390,15 @@
             padding-bottom: 0.2em;
             margin-bottom: 0.3em;
         }
-        @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
-            #up,
-            #dog {
-                width: 45%;
+        @media only screen and (min-device-width: 768px) and (max-device-width: 1180px) and (orientation: portrait) {
+            .wlc {
+                font-size: 15vw;
             }
-            #by {
-                width: 58%;
+            .take {
+                font-size: 7vw;
+            }
+            .come {
+                font-size: 3vw;
             }
             .svgs {
                 padding-top: 3em;
@@ -405,7 +407,19 @@
                 font-size: 3vw;
             }
             .text1 {
-                padding-top: 2em;
+                padding-top: 0em;
+            }
+            .svgs {
+                padding-top: 8vw;
+            }
+            .stars-lg {
+                padding-top: 5vw;
+            }
+            #stars {
+                width: 11em;
+            }
+            .mySwiper {
+                padding-top: 10vw;
             }
             #sun,
             #moon {
@@ -422,6 +436,18 @@
             }
             .bullet {
                 margin-left: 6em;
+            }
+            #crt1 {
+                font-size: 10vw;
+            }
+            #crt2 {
+                font-size: 3vw;
+            }
+            .crth {
+                padding-top: 10vw;
+            }
+            .line {
+                line-height: 5vw;
             }
         }
 
