--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
   font-style: normal;
   font-display: swap;
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .d-no {
     display: none;
   }
@@ -313,7 +313,7 @@ body {
     margin-bottom: 0.3em;
   }
 }
-@media only screen and (max-width: 1024px) and (orientation: portrait) and (min-device-width: 711px) and (max-device-width: 1180px) and (orientation: portrait) {
+@media only screen and (max-width: 1024px) and (min-device-width: 711px) and (max-device-width: 1180px) and (orientation: portrait) {
   .mobilediv .wlc {
     font-size: 15vw;
   }
@@ -379,7 +379,7 @@ body {
     line-height: 5vw;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .slider-container {
     width: 100%;
     height: auto;
@@ -389,7 +389,7 @@ body {
     background-color: linear-gradient(to right, rgb(255, 65, 108), rgb(255, 75, 43));
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .pkgs-slider {
     width: 100%;
     height: 600px;
@@ -401,7 +401,7 @@ body {
     transition: 0.7s;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .slide-div {
     display: flex;
     align-items: center;
@@ -409,7 +409,7 @@ body {
     margin: 0 30px 0 10px;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .pkg {
     position: relative;
     width: 240px;
@@ -417,7 +417,7 @@ body {
     transition: 0.5s;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .button {
     position: absolute;
     width: 240px;
@@ -425,7 +425,7 @@ body {
     transition: 0.5s;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .crth1 {
     color: white;
     font-family: "Momcake Pro";
@@ -433,7 +433,7 @@ body {
     font-size: 3rem;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .crth2 {
     color: white;
     font-family: "Lato";
@@ -441,19 +441,19 @@ body {
     letter-spacing: 1px;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .crth3 {
     color: white;
     font-family: "Momcake Pro";
     font-size: 1rem;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .msg {
     text-align: center;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .crth4 {
     color: white;
     font-family: "Momcake Pro";
@@ -461,7 +461,7 @@ body {
     font-size: 2rem;
   }
 }
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
   .mobilediv .crth5 {
     color: white;
     font-family: "Momcake Pro";
