--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,7 @@
 
 //@each $var in list {
 
-@media all and (max-width: 1024px) and (orientation: portrait) {
+@media all and (max-width: 1024px) {
     .d-no {
         display: none;
     }
