--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
   font-style: normal;
   font-display: swap;
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .d-no {
     display: none;
   }
@@ -313,7 +313,7 @@ body {
     margin-bottom: 0.3em;
   }
 }
-@media only screen and (max-width: 1024px) and (min-device-width: 711px) and (max-device-width: 1180px) and (orientation: portrait) {
+@media only screen and (max-width: 1024px) and (orientation: portrait) and (min-device-width: 711px) and (max-device-width: 1180px) and (orientation: portrait) {
   .mobilediv .wlc {
     font-size: 15vw;
   }
@@ -379,7 +379,7 @@ body {
     line-height: 5vw;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .slider-container {
     width: 100%;
     height: auto;
@@ -389,7 +389,7 @@ body {
     background-color: linear-gradient(to right, rgb(255, 65, 108), rgb(255, 75, 43));
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .pkgs-slider {
     width: 100%;
     height: 600px;
@@ -401,7 +401,7 @@ body {
     transition: 0.7s;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .slide-div {
     display: flex;
     align-items: center;
@@ -409,7 +409,7 @@ body {
     margin: 0 30px 0 10px;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .pkg {
     position: relative;
     width: 240px;
@@ -417,7 +417,7 @@ body {
     transition: 0.5s;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .button {
     position: absolute;
     width: 240px;
@@ -425,7 +425,7 @@ body {
     transition: 0.5s;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .crth1 {
     color: white;
     font-family: "Momcake Pro";
@@ -433,7 +433,7 @@ body {
     font-size: 3rem;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .crth2 {
     color: white;
     font-family: "Lato";
@@ -441,19 +441,19 @@ body {
     letter-spacing: 1px;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .crth3 {
     color: white;
     font-family: "Momcake Pro";
     font-size: 1rem;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .msg {
     text-align: center;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .crth4 {
     color: white;
     font-family: "Momcake Pro";
@@ -461,7 +461,7 @@ body {
     font-size: 2rem;
   }
 }
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
   .mobilediv .crth5 {
     color: white;
     font-family: "Momcake Pro";
@@ -540,7 +540,8 @@ body {
     font-family: "Lato";
     font-weight: 500;
     font-size: 1vw;
-    line-height: 16px;
+    line-height: 1.2em;
+    white-space: nowrap;
   }
   body .container2 p {
     font-family: "Lato", Helvetica, sans-serif;
@@ -568,6 +569,29 @@ body {
   }
   body .container2 .nav-hover:hover::after {
     width: 100%;
+    transition: 0.1s ease-in-out;
+  }
+  body .container2 .nav-hover1 {
+    color: #ffffff;
+    font-family: "Lato";
+    font-weight: 400;
+    font-size: 13px;
+    letter-spacing: normal;
+    word-spacing: -0.5;
+    position: relative;
+  }
+  body .container2 .nav-hover1::after {
+    content: "";
+    width: 0;
+    height: 2px;
+    background-color: #ffffff;
+    margin: auto;
+    margin-top: -2px;
+    border-radius: 20px;
+    display: block;
+  }
+  body .container2 .nav-hover1:hover::after {
+    width: 50%;
     transition: 0.1s ease-in-out;
   }
   body .container2 .navbullet {
@@ -673,7 +697,7 @@ body {
     z-index: 1;
   }
   body .container2 .img {
-    transform: translateX(-45em);
+    transform: translateX(-40em);
     transition: all 1.6s ease;
     height: 100vh;
     width: 100vw;
