--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,7 @@
 
 //@each $var in list {
 
-@media all and (max-width: 1024px) {
+@media all and (max-width: 1024px) and (orientation: portrait) {
     .d-no {
         display: none;
     }
@@ -619,7 +619,8 @@
                     font-family: "Lato";
                     font-weight: 500;
                     font-size: 1vw;
-                    line-height: 16px;
+                    line-height: 1.2em;
+                    white-space: nowrap;
                 }
             }
 
@@ -655,7 +656,33 @@
                     transition: 0.1s ease-in-out;
                 }
             }
+            .nav-hover1 {
+                color: #ffffff;
+                font-family: "Lato";
+                font-weight: 400;
+                font-size: 13px;
+                letter-spacing: normal;
+                word-spacing: -0.5;
+                position: relative;
 
+                &::after {
+                    content: "";
+
+                    width: 0;
+                    height: 2px;
+                    background-color: #ffffff;
+                    margin: auto;
+                    margin-top: -2px;
+
+                    border-radius: 20px;
+                    display: block;
+                }
+
+                &:hover::after {
+                    width: 50%;
+                    transition: 0.1s ease-in-out;
+                }
+            }
             .navbullet {
                 padding-right: 30px;
                 padding-left: 20px;
@@ -772,7 +799,7 @@
             }
 
             .img {
-                transform: translateX(-45em);
+                transform: translateX(-40em);
                 transition: all 1.6s ease;
                 height: 100vh;
                 width: 100vw;
